# SimpleLoopClosure

./: CMakeLists.txt  README.md  package.xml
config/: simple_loop_closure.yaml
include/simple_loop_closure/: simple_loop_closure_node.hpp
launch/: simple_loop_closure.launch.py
src/: simple_loop_closure_node.cpp  test.cpp
